@@ -64,6 +64,8 @@ v3.2.0 - xx xxx xxxx
        max sleep configuration of PMD thread cores.
      * Removed experimental tag from PMD load based sleeping.
      * Added new Qos type 'pkts-policer' to support kilo packet-per-second policing.
+     * Added support for ingress kilo packet-per-second policing configured by
+       ingress_policing_kpkts_rate/burst options.
    - Linux TC offload:
      * Add support for offloading VXLAN tunnels with the GBP extensions.
    - Python
